2010-05-17  Drew Wilson  <atwilson@chromium.org>

        Unreviewed test expectations update for chromium.

        * platform/chromium-mac/html5lib/runner-expected.txt: Added.
        * platform/chromium-win/html5lib/runner-expected.txt: Added.

2010-05-17  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r59652.
        http://trac.webkit.org/changeset/59652
        https://bugs.webkit.org/show_bug.cgi?id=39268

        file-input-files-access test is broken on Mac (Requested by
        dcheng on #webkit).

        * editing/pasteboard/file-input-files-access-expected.txt:
        * editing/pasteboard/script-tests/file-input-files-access.js:
        (runTest):
        * http/tests/security/clipboard/script-tests/clipboard-file-access.js:

2010-05-17  Daniel Cheng  <dcheng@chromium.org>

        DragData::asURL() shouldn't do file validity checks
        https://bugs.webkit.org/show_bug.cgi?id=38711

        Several layout tests depended on the fact that dropping a file would
        never trigger navigation. This never happened to occur in the past,
        since it just so happened that the filenames used in the tests never
        resolved to files that exist. Since DragData::asURL() no longer tries
        to verify file existence, the layout tests were updated to either
        suppress navigation or log any navigation that should occur as part of
        the test.

        * editing/pasteboard/file-input-files-access-expected.txt:
        * editing/pasteboard/script-tests/file-input-files-access.js:
        (runTest.window.onbeforeunload):
        (runTest):
        * http/tests/security/clipboard/script-tests/clipboard-file-access.js:

2010-05-16  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Darin Adler.

        Add tests for Bug 31267 - :nth-child(-2n) should match no element.
        http://trac.webkit.org/changeset/58300 has fixed this already.
        https://bugs.webkit.org/show_bug.cgi?id=31267
