@@ -1,3 +1,11 @@
+2010-05-18  Jian Li  <jianli@chromium.org>
+
+        Unreviewed. Build fix. Disable test cases in file-reader.html that
+        cause time-out in mac bot for further investigation.
+
+        * fast/files/file-reader-expected.txt:
+        * fast/files/file-reader.html:
+
 2010-05-17  Drew Wilson  <atwilson@chromium.org>
 
         Unreviewed test expectations update for chromium.
